<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".AddProductFragment">

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/icon_back_content_description"
        android:src="@drawable/ic_arrow_back" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18" />

    <EditText
        android:id="@+id/et_price"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_product_price" />

    <EditText
        android:id="@+id/et_firm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_product_firm" />

    <EditText
        android:id="@+id/et_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_product_body" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/pink"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_product"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

</LinearLayout>
